--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
                  <div class="top-bar">
     Alien goldd - Твоя ідеальна косметика
   </div>
+  
 <header class="site-header">
+  <div class="burger" id="burger">
+  <i class="fas fa-bars"></i>
+</div>
+
+<nav class="mobile-nav" id="mobileNav">
+  <ul>
+    <li><a href="#">Головна</a></li>
+    <li><a href="#">Магазин</a></li>
+    <li><a href="#">Про нас</a></li>
+    <li><a href="#">Контакти</a></li>
+  </ul>
+</nav>
   <div class="container">
     <nav class="nav-left">
       <ul class="nav-list">
@@ -27,7 +40,7 @@
       </ul>
     </nav>
     <div class="logo">
-      <a href="#"><img src="/img/logo.png" alt="Лого" /></a>
+      <a href="#"><img src="img/logo.png" alt="Лого" /></a>
     </div>
     <nav class="nav-right">
       <a href="#" class="icon-btn"><i class="fa-solid fa-magnifying-glass"></i></a>
