--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
                  <div class="top-bar">
     Alien goldd - Твоя ідеальна косметика
   </div>
-  
 <header class="site-header">
-  <div class="burger" id="burger">
-  <i class="fas fa-bars"></i>
-</div>
-
+<i class="burger fas fa-bars" id="burger"></i>
 <nav class="mobile-nav" id="mobileNav">
   <ul>
-    <li><a href="#">Головна</a></li>
-    <li><a href="#">Магазин</a></li>
+    <li><a href="index.html">Головна</a></li>
+    <li><a href="category.html">Категорії</a></li>
+    <li><a href="#">Товари</a></li>
+    <li><a href="sale-catalog.html">Акції</a></li>
     <li><a href="#">Про нас</a></li>
-    <li><a href="#">Контакти</a></li>
   </ul>
 </nav>
   <div class="container">
@@ -35,7 +32,6 @@
         <li><a href="category.html">Категорії</a></li>
         <li><a href="#">Товари</a></li>
         <li><a href="sale-catalog.html">Акції</a></li>
-        <li><a href="#">Бренди</a></li>
         <li><a href="#">Про нас</a></li>
       </ul>
     </nav>
